# personal_review_gen

./: .gitignore  README.md  main.py  pyproject.toml
.claude/: settings.local.json
fetch_review_stats/: cli.py  config.py  config.toml  csv_export.py  github_client.py  jira_client.py  markdown_gen.py  models.py  ui.py
youtrip_review/: cli.py  config.py  config.toml  csv_export.py  git_client.py  github_client.py  jira_client.py  markdown_gen.py  models.py
